cmake_minimum_required(VERSION 3.17)
project(myCP_sols)

set(CMAKE_CXX_STANDARD 14)

add_executable(Conditional_Statements HackerRank/CPP/Conditional_Statements.cpp)
add_executable(For_Loop HackerRank/CPP/For_Loop.cpp)
add_executable(Functions HackerRank/CPP/Functions.cpp)
add_executable(Arrays_Introduction HackerRank/CPP/Arrays_Introduction.cpp)
add_executable(Variable_Sized_Arrays HackerRank/CPP/Variable_Sized_Arrays.cpp)
