cmake_minimum_required(VERSION 3.17)
project(myCP_sols)

set(CMAKE_CXX_STANDARD 14)

add_executable(Conditional_Statements HackerRank/CPP/Conditional_Statements.cpp)
add_executable(For_Loop HackerRank/CPP/For_Loop.cpp)
add_executable(Functions HackerRank/CPP/Functions.cpp)
add_executable(Arrays_Introduction HackerRank/CPP/Arrays_Introduction.cpp)
add_executable(Variable_Sized_Arrays HackerRank/CPP/Variable_Sized_Arrays.cpp)
add_executable(BITMASK3 CC/BITMASK3.cpp)
add_executable(flipping_bits HackerRank/flipping_bits.cpp)
add_executable(455A CF/455A.cpp)
add_executable(vector_sort HackerRank/CPP/vector_sort.cpp)
add_executable(vector_erase HackerRank/CPP/vector_erase.cpp)
add_executable(cpp_lower_bound HackerRank/CPP/cpp_lower_bound.cpp)
add_executable(SAMER08F SPOJ/SAMER08F.cpp)
add_executable(AP2 SPOJ/AP2.cpp)
add_executable(BYTESM2 SPOJ/BYTESM2.cpp)
add_executable(HXOR CC/HXOR.cpp)
add_executable(REC09B CC/REC09B.cpp)
add_executable(ETF SPOJ/ETF.cpp)
add_executable(EDIST SPOJ/EDIST.cpp)
add_executable(1454C CF/1454C.cpp)
add_executable(1471B CF/1471B.cpp)
add_executable(TDPRIMES SPOJ/TDPRIMES.cpp)
add_executable(COMDIV SPOJ/COMDIV.cpp)
add_executable(INTEST SPOJ/INTEST.cpp)
add_executable(POLEVAL SPOJ/POLEVAL.cpp)
add_executable(1465B CF/1465B.cpp)
add_executable(FACVSPOW SPOJ/FACVSPOW.cpp)
add_executable(cpp-sets HackerRank/CPP/cpp-sets.cpp)
add_executable(cpp-maps HackerRank/CPP/cpp-maps.cpp)